# gaika

./: CMakeLists.txt
dz04projections/: CMakeLists.txt  main.cpp
dz04projections/include/: geometry.hpp
dz04projections/src/: main.cpp
include/: display2d.hpp  geometry.hpp  matrices.hpp  model.hpp  obj_io.hpp  viewer_state.hpp
lib/: display2d.cpp  geometry.cpp  matrices.cpp  obj_io.cpp
resources/: resources.qrc
resources/meshes/: lightbulb.mtl  sun.mtl
resources/meshes/simple/: cube_colors.mtl  flattrn.mtl  sphere40.mtl  tomato.mtl  tomato_smooth.mtl
src/: dz04.cpp  dz04_qt.cpp
tools/: gen_platonic.py
